syntax = "proto3";
package gossip;

import "google/protobuf/empty.proto";

option go_package = "gitlab.lrz.de/netintum/teaching/p2psec_projects_2024/Gossip-7/internal/gossip";

message GossipAnnounce {
    uint32 size = 1;
    uint32 gossip_announce = 2;
    uint32 ttl = 3;
    uint32 reserved = 4;
    uint32 data_type = 5;
    bytes data = 6;
}

message GossipNotify {
  uint32 size = 1;
  uint32 gossip_notify = 2;
  uint32 reserved = 3;
  uint32 data_type = 4;
}

message GossipNotification {
  uint32 size = 1;
  uint32 gossip_notification = 2;
  uint32 message_id = 3;
  uint32 data_type = 4;
  bytes data = 5;
}

message GossipValidation {
  uint32 size = 1;
  uint32 gossip_validation = 2;
  uint32 message_id = 3;
  uint32 reserved = 4;
  bool is_valid = 5;
}


service GossipService {
  rpc Announce(GossipAnnounce) returns (google.protobuf.Empty) {};

  rpc Notify(GossipNotify) returns (google.protobuf.Empty) {};

  rpc Notification(GossipNotify) returns (GossipValidation) {};
}
