syntax = "proto3";

package p2p;

option go_package = "gitlab.lrz.de/netintum/teaching/p2psec_projects_2024/Gossip-7/pkg/proto";

message GossipMessage {
  int32 type = 1;
  string from =  2;
  bytes payload = 3;
  int32 ttl = 4;
  string message_id = 5;
}